# ivk

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  ivk_benchmark_spike.md  ivk_build_artifact_spike.md  ivk_design_philosophy.md  ivk_mvp_to_launch_plan.md  ivk_mvp_to_launch_plan_v2.md  ivk_workspace_kernel_plan_v3.md
.github/workflows/: ci.yml  release.yml
crates/clonewt/: Cargo.toml
crates/clonewt/src/: main.rs
crates/ivk-cli/: Cargo.toml
crates/ivk-cli/src/: ch.rs  doctor.rs  gc.rs  help.rs  init.rs  main.rs  output.rs  reg.rs  status.rs  ws.rs  ws_new.rs
crates/ivk-cli/src/assets/: AGENTS.md  skills_SKILL.md  skills_cli.md  skills_rules_safety.md  skills_workflow.md
crates/ivk-cli/src/bench/: compare.rs  disk.rs  gc_bench.rs  harness.rs  mod.rs  spawn.rs
crates/ivk-cli/tests/: bench.rs  changeset.rs  from_rev.rs  gc.rs  registry_cli.rs
crates/ivk-core/: Cargo.toml
crates/ivk-core/src/: lib.rs  materializer.rs  registry.rs  workspace.rs
crates/ivk-core/src/git/: cli.rs  mod.rs
crates/ivk-core/tests/: backend.rs  integration.rs  registry.rs
demos/: build-race.tape  chart.py  disk-comparison.tape  disk-race.tape
demos/promo/: README.md  package-lock.json  package.json
demos/promo/src/: Promo.tsx  Root.tsx  bits.tsx  theme.ts
demos/promo/src/scenes/: Features.tsx  Outro.tsx  Problem.tsx  Solution.tsx  Title.tsx
docs/: _config.yml  build-cache-recipes.md  index.html  portability.md  release.md  styles.css
examples/agent-fanout/: PLAN.md
examples/demo-task/: README.md  session.md  setup.sh
examples/design-race/: PLAN.md
examples/todo-100/: setup.sh  simulate.sh
results/: build-summary.md  summary.md
scripts/: test-linux-btrfs.sh
scripts/bench/: analyze.py  bench-create.sh  clone.sh  collect.sh  create-one.sh  gen-repo.sh  gen_repo.py  lib.sh  live-build-race.sh  live-race.sh
skills/ivk/: SKILL.md  cli.md  mcp.md  workflow.md
skills/ivk/rules/: safety.md
