[workspace]
resolver = "2"
members = [
  "crates/ivk-core",
  "crates/ivk-cli",
  "crates/clonewt",
]
# The bench fixtures are independent Cargo projects; keep .cache/ out of the
# workspace so the materialized workspaces with their own Cargo.toml don't
# confuse cargo about which workspace they belong to.
exclude = [
  ".cache",
]

# NOTE: workspace.package inheritance (`edition.workspace = true`) requires
# Rust 1.64+. The dev box this was scaffolded on has 1.59, so we duplicate
# edition / license in each member's Cargo.toml. Update both places when bumping.

# workspace.dependencies inheritance requires Rust 1.64+; each crate uses
# path = "../ivk-core" directly until we bump the MSRV.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
