[package]
name = "ivk-cli"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ivy Kernel CLI — parallel workspace kernel for AI agents."
homepage = "https://ivykernel.github.io/ivk/"
repository = "https://github.com/ivykernel/ivk"
readme = "../../README.md"
keywords = ["git", "worktree", "ai-agents", "workspace", "clonefile"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ivk"
path = "src/main.rs"

[dependencies]
ivk-core = { path = "../ivk-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
filetime = "0.2"
