[package]
name = "ivk-core"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core kernel logic for Ivy Kernel: workspace materialization via clonefile / reflink."
homepage = "https://ivykernel.github.io/ivk/"
repository = "https://github.com/ivykernel/ivk"
readme = "../../README.md"
keywords = ["git", "worktree", "clonefile", "reflink", "workspace"]
categories = ["development-tools", "filesystem"]

[lib]
name = "ivk_core"
path = "src/lib.rs"

# libc on Linux gives us a direct ioctl(FICLONE) without shelling out to cp.
# macOS gets clonefile(2) via a plain extern "C" declaration; no libc needed.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
